<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWishlist</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="url">URL</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="salir">Salir</string>

</resources>
