<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#ff425fad">

    <TextView
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nombre"
        android:id="@+id/txtName"
        android:textColor="#10bcc9"
        android:textStyle="bold"
        android:layout_weight="0.04"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:layout_weight="0.05"
        android:editable="true"
        android:enabled="true" />

    <TextView
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/precio"
        android:id="@+id/txtPrice"
        android:textColor="#10bcc9"
        android:textStyle="bold"
        android:layout_weight="0.04"
        android:textSize="15sp"
        android:singleLine="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPrice"
        android:layout_weight="0.05"
        android:editable="true"
        android:enabled="true" />

    <TextView
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/url"
        android:id="@+id/txtUrl"
        android:textColor="#10bcc9"
        android:textStyle="bold"
        android:layout_weight="0.04"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUrl"
        android:layout_weight="0.05"
        android:editable="true"
        android:enabled="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04">

        <Button
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:text="@string/aceptar"
            android:id="@+id/btnOK"
            android:layout_weight="0.05"
            android:textColor="#10bcc9"
            android:outlineProvider="bounds"
            android:singleLine="false"
            android:background="@drawable/buttonshape" />

        <Button
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:text="@string/cancelar"
            android:id="@+id/btnCancel"
            android:layout_weight="0.05"
            android:textColor="#10bcc9"
            android:singleLine="false"
            android:background="@drawable/buttonshape" />
    </LinearLayout>

</LinearLayout>